Fix game cell floating to top

--- a/main.html
+++ b/main.html
@@ -64,6 +64,7 @@
   div.gameViewCell {
     display: inline-block;
     background-color: black;
+    vertical-align: top;
     width: 140px;
     padding: 0px;
     margin:0px 5px 25px 5px;
