--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
     color: #F1F1F1;
   }
 
+
+
   #gameSection {
     display: inline-block;
     text-align: center;
@@ -61,6 +63,12 @@
     overflow: hidden;
   }
 
+  @keyframes gameAppearing {
+      0%   {opacity: 0; margin-top: 20px;}
+      100% {opacity: 1; margin-top: 0px;}
+  }
+
+
   div.gameViewCell {
     display: inline-block;
     background-color: black;
@@ -68,6 +76,9 @@
     width: 140px;
     padding: 0px;
     margin:0px 5px 25px 5px;
+    animation-name: gameAppearing;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
   }
 
 
