--- a/main.html
+++ b/main.html
@@ -80,6 +80,14 @@
     animation-name: gameAppearing;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
+    perspective: 100px;
+  }
+
+  div.gameViewCell img:hover {
+    transition: 0.5s;
+    transition-timing-function: ease-in-out;
+    opacity: 0.8;
+    //transform: rotateX(20deg) translateY(-110px);
   }
 
 
