--- a/main.html
+++ b/main.html
@@ -1,211 +1,11 @@
 <html>
 <head>
   <title>Game Library</title>
-  <style>
-  body {
-    background-color: #3A3F4B;
-    font-family: Segoe UI,SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #F1F1F1;
-  }
-
-
-
-  #gameSection {
-    display: inline-block;
-    text-align: center;
-    margin: 30px;
-    width: 95%;
-  }
-
-  .sectionHeader {
-    display: inline-block;
-    width:100%;
-  }
-
-  .sectionTitle {
-    float: left;
-    font-size: 18px;
-    margin-left: 5px;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    padding: 0;
-  }
-
-  .showAllButton {
-    float:right;
-    margin-top: 10px;
-    margin-right: 40px;
-    border: 1px solid black;
-    background-color: black;
-    text-align: right;
-    color: white;
-    text-decoration: none;
-    padding: 5px 10px 5px 10px;
-    opacity: 0.65;
-    transition: 0.3s;
-  }
-
-  .showAllButton img {
-    width: 15px;
-    vertical-align: top;
-    margin-right: 5px;
-  }
-  .showAllButton:hover, .showAllButton:active, .showAllButton:focus {
-    opacity: 1;
-    border: 1px solid black;
-  }
-
-  #gameLibrary{
-    background-color: none;
-    text-align: left;
-    height: 300px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-
-  @keyframes gameAppearing {
-      0%   {opacity: 0; margin-top: 20px;}
-      100% {opacity: 1; margin-top: 0px;}
-  }
-
-
-  div.gameViewCell {
-    display: inline-block;
-    background-color: black;
-    vertical-align: top;
-    width: 140px;
-    padding: 0px;
-    margin:0px 5px 25px 5px;
-    animation-name: gameAppearing;
-    animation-duration: 1s;
-    animation-timing-function: ease-in-out;
-    perspective: 100px;
-  }
-
-  div.gameViewCell img:hover {
-    transition: 0.5s;
-    transition-timing-function: ease-in-out;
-    opacity: 0.8;
-    //transform: rotateX(20deg) translateY(-110px);
-  }
-
-
-  div.gameViewCell img {
-    width: 140px;
-    padding: 0px;
-    margin: 0px;
-  }
-
-  div.gameViewCell .gameDetails {
-    word-wrap: break-word;
-    position: relative;
-    vertical-align: top;
-    background-color: black;
-    height:65px;
-    margin:10px 5px 0px 5px;
-    padding: 0px;
-  }
-
-  div.gameViewCell .gameDetails p {
-    margin: 5px;
-    padding: 0px;
-  }
-
-  div.gameViewCell .gameDetails p.gameTitle {
-    font-weight: bold;
-    font-size: 12px;
-  }
-
-  div.gameViewCell .gameDetails p.gamePrice {
-    /* The parent container .gameDetails must be relative for the game price to align to bottom */
-    position: absolute;
-    bottom: 5px;
-    font-size: 10px;
-  }
-
-  </style>
-<script>
-
-  const sampleGame = {
-        coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTcwXbHBmGEy0sI6WRRfI_JyR7CMeBUMjSBMPWSQpd92PN58Qqg4nlSfCUvaaFtGTbYw_3qK9ojPYv2B5JhAJmFDqVs_EcDLB413zJ8Uudqos4K00xN5ACoLDeR7tzgxCSyB53ShT8wcx4_matCAdQt.pkhcewZpDUaakMHmtixxJ4-&h=300&w=200&format=jpg",
-        title : "Hitman the greatest assassin",
-        price: 230
-      };
-
-  //const games = Array(10).fill(sampleGame);
-
-  const games = [
-    {
-      coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTcwXbHBmGEy0sI6WRRfI_JyR7CMeBUMjSBMPWSQpd92PN58Qqg4nlSfCUvaaFtGTbYw_3qK9ojPYv2B5JhAJmFDqVs_EcDLB413zJ8Uudqos4K00xN5ACoLDeR7tzgxCSyB53ShT8wcx4_matCAdQt.pkhcewZpDUaakMHmtixxJ4-&h=300&w=200&format=jpg",
-      title : "Hitman",
-      price : 300
-    },
-    {
-      coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTcF.eDZomSCEW5BsVkS0cEuwsns0BEZCPAiv2Y.B28t3jeBCPMZZh7Ts0ypmOBU8.uxRjpv2nAyIuLZlocrmVm7syPWi4L379HznmZK3YZRAMr2WoWDsGfd3zZX6MsUq.C0Jur8akknxmLXQtMT5dSDCD57.gsBEcah.4kao6Z_VA-&h=300&w=200&format=jpg",
-      title : "Halo 5: Guardians",
-      price : 230
-    },
-    {
-      coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTc0S1MXQqedrl5ZWQr_R8DsCcFWgIqOIFdsQlbS14WMN5dMMqgnWTdpbZK2giz3tjLiQjgIUhdJ_T3qG8EKIMNir43mHPHe1ysjr8RsBMni0y9S.bRuVGhpwF0ql7bVF9Nc7GYz74xr7M9atzbxRMfFxfA7mAA9UsoAAoOYazK._E-&h=300&w=200&format=jpg",
-      title : "The Division",
-      price : 150
-    },
-    {
-      coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTc_VNnbfu6USpGq6KyU62ZLZFyX9_KCf1M7yiXvAkW9jgAwQYY_bTwvOouZP9W_I9qcVeIxCBDDs.0RIVzYyaJMTSmQtCja0re7kRksGtCzLvJUX_SmCbOpK06LULwKrwxpFaJdKvxfzt2rV6Nk_2ca5DhlNTA4CypL2SY0uiY9YI-&h=300&w=200&format=jpg",
-      title : "DEAD OR ALIVE 5",
-      price : 350
-    },
-    {
-      coverImageUrl : "https://store-images.s-microsoft.com/image/apps.11650.13510798887356280.235dc311-b50e-403c-af16-ceffcc2c2399.99b85445-285f-4bc9-a0ec-53e5c36b1ae3?mode=crop&q=90&h=300&w=200&format=jpg",
-      title : "Gears of War 4",
-      price : 450
-    },
-    {
-      coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTcAL_uXqNGDhlNIt0wsKBphnYi_G_lNgvWGjm1ZpEzt6R3irriLguNLLBgd4w9Id6C2YVUUCqrCtxMT31DymDeyCWJSl9_02LfMGjk3f6Ofnw3YysI.WYiPybTsyLW6tcZKtlFmsc2yXY71HCCnuSvHwoJA5odWzuMy8iMt59mkkQ-&h=300&w=200&format=jpg",
-      title : "The Witcher 3: Wild Hunt",
-      price : 390
-    },
-    {
-      coverImageUrl : "https://images-eds-ssl.xboxlive.com/image?url=8Oaj9Ryq1G1_p3lLnXlsaZgGzAie6Mnu24_PawYuDYIoH77pJ.X5Z.MqQPibUVTc38Eq1C_xATsS9hDnsBKymtTbuZVvbZ2rWGuQ9Z7NfVQ.xENKwBFdWJMj2qDE5gbCA9dDIioBF7ecWiX.ffZQIb5Gs7362GcOuu7lC7tZRkOP4927U48upgwnjOUGnqiK9dPLdTU0m.eI7lxxD0IlKCwBA.JdLla957Ik.fqwy64-&h=300&w=200&format=jpg",
-      title : "Overcooked 2!",
-      price : 99
-    },
-  ];
-
-  const gameTemplate = (game) =>
-  `
-  <div class="gameViewCell">
-    <img src="${game.coverImageUrl}" />
-    <div class="gameDetails">
-      <p class="gameTitle">${game.title}</p>
-      <p class="gamePrice">HK$${game.price.toFixed(2)}</p>
-    </div>
-  </div>
-  `;
-
-  function onLoad(){
-    games.forEach((game,index) => {
-      const gameLibrary = document.getElementById("gameLibrary");
-      gameLibrary.innerHTML += gameTemplate(game);
-    })
-  }
-
-  const showMoreGames = () => {
-      const gameLibrary = document.getElementById("gameLibrary");
-      const gameButton = document.getElementById("showGameLabel");
-      const libraryState = window.getComputedStyle(gameLibrary).overflow;
-      if (libraryState === 'hidden')
-      {
-        gameButton.innerHTML = "Hide";
-        gameLibrary.setAttribute("style","height: auto; overflow: visible;");
-      }
-      else {
-        gameButton.innerHTML = "Show All";
-        gameLibrary.setAttribute("style","height: 300px; overflow: hidden;");
-      }
-  }
-</script>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <!-- main.js cannot import gamesjson.js thus it has to be included here instead -->
+  <!-- can use build tools to remedy this case later -->
+  <script src="games.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body onload="onLoad()">
@@ -217,11 +17,6 @@
       </button>
     </div>
     <div id="gameLibrary" />
-  </div>
-  <div id="videoSection">
-    <div class="sectionHeader">
-      <h1 class="sectionTitle">Video Library</h1>
-    </div>
   </div>
 </body>
 </html>
